<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CustomToolbarStyle" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_tasks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:background="#33000000"
            android:padding="10dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/task_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_baseline_add"
            android:contentDescription="@string/task_content_description"
            android:layout_margin="20dp" />

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/motion_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutDescription="@xml/motion_scene">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.85" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.65" />

            <RelativeLayout
                android:id="@+id/relative_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_shape"
                app:layout_constraintTop_toBottomOf="parent"
                android:padding="5dp">

                <LinearLayout
                    android:id="@+id/layout_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:inputType="text"
                        android:id="@+id/task_edit"
                        android:autofillHints="@string/hint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layout_edit"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_remind"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/reminder_text"
                        android:textColor="@color/design_default_color_primary" />

                    <Button
                        android:id="@+id/button_confirm"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/confirm_text"
                        android:textColor="@color/design_default_color_primary" />

                    <Button
                        android:id="@+id/button_importance"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/important_text"
                        android:textColor="@color/design_default_color_primary" />
                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/layout_shape"
                app:layout_constraintTop_toBottomOf="parent">

                <TextView
                    android:id="@+id/time_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="20sp" />

                <LinearLayout
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <NumberPicker
                        android:theme="@style/DefaultPickerTheme"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:id="@+id/hour_picker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <NumberPicker
                        android:theme="@style/DefaultPickerTheme"
                        android:layout_weight="1"
                        android:id="@+id/minute_picker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"/>

                    <NumberPicker
                        android:theme="@style/DefaultPickerTheme"
                        android:layout_weight="1"
                        android:id="@+id/day_picker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"/>

                    <NumberPicker
                        android:theme="@style/DefaultPickerTheme"
                        android:layout_weight="1"
                        android:id="@+id/month_picker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"/>

                </LinearLayout>

                <LinearLayout
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:text="@string/cancel_text"
                        android:layout_weight="1"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:id="@+id/reminder_cancel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/teal_200"/>
                    <Button
                        android:text="@string/confirm_text"
                        android:layout_weight="1"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:id="@+id/reminder_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/teal_200"/>
                    <Button
                        android:text="@string/delete_text"
                        android:enabled="false"
                        android:layout_weight="1"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:id="@+id/reminder_delete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/teal_200"/>
                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.motion.widget.MotionLayout>

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/header"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>